tests/dataset/tpc-ds/compiler/kotlin/q53.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-15T07:24:09Z
fun div(a: Any?, b: Any?): Double {
    val x = toDouble(a)
    val y = toDouble(b)
    return if (y == 0.0) 0.0 else x / y
}

fun sum(list: List<Any?>): Number {
    var s = 0.0
    var allInt = true
    for (n in list) {
        val d = toDouble(n)
        if (d % 1.0 != 0.0) allInt = false
        s += d
    }
    return if (allInt) s.toInt() else s
}

fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toDouble(v: Any?): Double = when (v) {
    is Double -> v
    is Int -> v.toDouble()
    is String -> v.toDouble()
    else -> 0.0
}

fun json(v: Any?) {
    println(toJson(v))
}

fun toJson(v: Any?): String = when (v) {
    null -> "null"
    is String -> "\"" + v.replace("\"", "\\\"") + "\""
    is Boolean, is Number -> v.toString()
    is Map<*, *> -> v.entries.joinToString(prefix = "{", postfix = "}") { toJson(it.key.toString()) + ":" + toJson(it.value) }
    is Iterable<*> -> v.joinToString(prefix = "[", postfix = "]") { toJson(it) }
    else -> toJson(v.toString())
}

class Group<K, T>(val key: K, val items: MutableList<T>) : MutableList<T> by items
// Code generated from q53.mochi

data class Date_dim(var d_date_sk: Int, var d_month_seq: Int)

data class Item(var i_item_sk: Int, var i_manufact_id: Int)

data class Store_sale(var item: Int, var date: Int, var price: Double)

val item = mutableListOf(Item(i_item_sk = 1, i_manufact_id = 1), Item(i_item_sk = 2, i_manufact_id = 2))

val store_sales = mutableListOf(Store_sale(item = 1, date = 1, price = 10.0), Store_sale(item = 1, date = 2, price = 10.0), Store_sale(item = 2, date = 1, price = 30.0), Store_sale(item = 2, date = 2, price = 23.0))

val date_dim = mutableListOf(Date_dim(d_date_sk = 1, d_month_seq = 1), Date_dim(d_date_sk = 2, d_month_seq = 2))

val grouped = run {
    val __groups = mutableMapOf<Int, Group<Int, MutableMap<String, Any?>>>()
    val __order = mutableListOf<Int>()
    for (ss in store_sales) {
        for (i in item) {
            if (ss.item == i.i_item_sk) {
                for (d in date_dim) {
                    if (ss.date == d.d_date_sk) {
                        val __k = i.i_manufact_id
                        var __g = __groups[__k]
                        if (__g == null) {
                            __g = Group(__k, mutableListOf<MutableMap<String, Any?>>())
                            __groups[__k] = __g
                            __order.add(__k)
                        }
                        __g.add(mutableMapOf("ss" to ss, "i" to i, "d" to d) as MutableMap<String, Any?>)
                    }
                }
            }
        }
    }
    val __res = mutableListOf<Any?>()
    for (k in __order) {
        val g = __groups[k]!!
        __res.add(mutableMapOf("manu" to g.key, "sum_sales" to sum(run {
    val __res = mutableListOf<Any?>()
    for (x in g) {
        __res.add((x as MutableMap<String, Any?>)["price"])
    }
    __res
}), "avg_sales" to run { val r = run {
    val __res = mutableListOf<Any?>()
    for (x in g) {
        __res.add((x as MutableMap<String, Any?>)["price"])
    }
    __res
}.map{ toDouble(it) }.average(); if (r % 1.0 == 0.0) r.toInt() else r }))
    }
    __res
}

val result = run {
    val __res = mutableListOf<Any?>()
    for (g in grouped) {
        if (toDouble(div(toDouble(toDouble((g as MutableMap<String, Any?>)["avg_sales"]) > toDouble(0.0) && abs(toDouble((g as MutableMap<String, Any?>)["sum_sales"]) - toDouble((g as MutableMap<String, Any?>)["avg_sales"]))), toDouble((g as MutableMap<String, Any?>)["avg_sales"]))) > toDouble(0.1)) {
            __res.add(mutableMapOf("i_manufact_id" to (g as MutableMap<String, Any?>)["manu"], "sum_sales" to (g as MutableMap<String, Any?>)["sum_sales"]))
        }
    }
    __res
}

/**
 * Auto-generated from Mochi
 * @param x Double
 * @return Double
 */
fun abs(x: Double): Double {
    if (toDouble(x) >= toDouble(0.0)) {
        return x
    }
    return -x
}

fun main() {
    json(result)
}
